src/objects/Apttus_Config2__SavedSearch__c.object
<CustomObject>
    <description>Represents a saved search criteria.</description>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The search description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The search description</inlineHelpText>
        <label>Description</label>
        <length>1028</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchContext__c</fullName>
        <description>The search context</description>
        <inlineHelpText>The search context</inlineHelpText>
        <label>Search Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Search</fullName>
                </value>
                <value>
                    <fullName>Asset Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchCriteria__c</fullName>
        <description>The search criteria specification</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The search criteria specification</inlineHelpText>
        <label>Search Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShareType__c</fullName>
        <description>The share type</description>
        <inlineHelpText>The share type</inlineHelpText>
        <label>Share Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>public</fullName>
                </value>
                <value>
                    <fullName>private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Saved Search</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>